style.css
body {
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-size: 16px; /* Reset default scaling */
  max-width: 100%;
}
/* * {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
} */


/* Navigation Bar */

#home {
  background-color:  green;
  padding-bottom: 1cm;
  margin-left:-1cm;
  margin-right:-1cm;
  margin-top:-1cm;
  padding-top: 2cm;
  padding-bottom: 2cm;
  height: 5mm;
 }

.topmenu {
  color: lightgray;
  margin: 10px;
  padding: 20px;
  font-size: 20px;
  text-decoration:none;
}

.topmenu:hover {
  color: white;
  font-weight: bolder;
  text-decoration: underline;
  
}

.topdiv {
  float: right;
  padding-right: 1cm;
}

.profile_name {
  float: left;
  padding-left: 2cm;
  color: white;
  font-size: 20px;
  /* Add the styles here */
}

.profile_name .contact_info {
  font-size: 15px;
  font-style: italic;
  display: flex;
  align-items: center;
  flex-direction: row;
}

.contact_info img {
  width:25px;
  margin-right: 10px;
  float:left;
}

/* Titles */

h2 {
  text-align: justify;
  font-size: 50px;
  text-align: center;
  float: left;
  color: green;
  margin: 30px;
  margin-left: 60px;
  margin-top: 40px;
  margin-bottom: 0px;
}

.introduction {
  text-align: justify;
  font-size: 30px;
  text-align: center;
  float: left;
  margin-top: 30px;
  margin-bottom: 20px;
  animation-duration: 5s;
  position: relative;
}

/* Used in the About Me sections */

.container {
  display: flex;
}

/* About Me */

.about-me {
  display: flex;
  align-items: center;
}

#about-me h1 {
  font-size: 65px;
  margin-top: 90px;
  color: green;
}

#about-me p {
  font-size: 25px;
  color: rgb(128, 128, 128);
  margin-top: -1cm;
}

.profile_image {
  width: 500px;
  height: 500px;
  border-radius: 50%;
  object-fit: contain;
  object-position: center;
  
}

.profile-info {
  margin-left: 50px;
/*   margin-top: 50px; */
  margin-right: 50px;
}

p {
    margin: 0; /* Removes extra spacing */
    line-height: 1.5; /* Adjusts spacing between lines */
}


/* Skills */ */
.skill {
  margin-top: 5px;
  padding: 0;
}

.all_skills {
  display: flex;
  flex-direction: row;
  flex-flow: wrap;
}

.all_skills :hover {
  background-color: green;
  flex-flow: wrap;
}

.skill  {
  border: 1px solid gray;
  display: block;
  border-radius: 6px;
  text-align: center;
  margin: 50px;
  padding: 10px;
  width: 2in;
  font-size: 20px;
  box-shadow: 0 3px 10px gray;
}

.skill img {
  height: 35px;
  align-items: center;
}

.skills h6 {
  align-items: center;
  font-size: 20px;
  margin-block-start: 8px;
  margin-block-end: 5px;
  font-weight: bold;
} 

.skills p {
  align-items: center;
  font-size: 15px;
  color: gray;
  margin-block-start: 5px;
  margin-block-end: 5px;
} 

.flex_center {
  display: flex;
  align-items: center;
  justify-content: center;
} */

/* Projects */

.projects-container {
  margin-top: 30px;
  margin-left: 60px;
}

.projects-container hr {
  border: 1px solid lightgray;
  width: 75%;
  margin-left: 5cm;
}

.project-card {
  margin: 0 15px 15px 30px;
  padding-bottom: 5px;
}

.project-card h3 {
  font-size: 25px;
  margin-left: 30px;
}

.project-card li {
  font-size: 20px;
  margin-left: 30px;
}

/* Recommendations */

.all_recommendations {
  display: flex;
  align-items: center;
  margin-left: 1in;
  flex-direction: row;
  flex-flow: wrap;
  padding: 20px;
}

.recommendation {
  font-style: italic;
  text-align: left;
  width: 21.875rem;
  padding: 1rem;
  background-color: #fff;
  border-radius: 11px;
  box-shadow: 0 3px 10px var(--primary-shadow);
  padding: 20px;
  margin: 10px;
  border:1px solid gray;
  font-size: 18px;
  height:150px
}

.recommendation span {
  color: green;
  font-size: 20px;
  font-family: 'Times New Roman', Times, serif;
}

/* Scroll to Top Button */

.iconbutton{
  width: 48px;
  height: 48px;
  border-radius: 100%;
  background-color: green;
  display: flex;
  align-items: center;
  justify-content: center;
  position: fixed;
  right: 3%;
  bottom: 3%;
  cursor: pointer;
}

/* Form Pop-up */

.popup {
  width:400px;
  background-color: #e8bcf0;
  border-radius: 3mm;
  top: 50%;
  left:50%;
  transform: translate(-50%,-50%);
  text-align: center;
  position: fixed;
  /* padding: 30px; */
  visibility: hidden;
}

.popup img {
  padding-top: 20px;
}

.popup button {
  background-color: #fff;
  border: 1px solid green;
  color: green;
  display: block;
  border-radius: 6px;
  text-align: center;
  margin: 50px;
  padding: 10px;
  width: 2in;
  font-size: 20px;
  margin-left: 25%;
}

.popup button:hover {
  background-color: #fff;
  border: 2px solid green;
  color: green;
  display: block;
  font-weight: bolder;
  text-align: center;
  cursor: pointer;
  margin-left: 25%;
}

/* Recommendation Form */

input, textarea {
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
  margin: 10px;  
  width:100%;
}

fieldset {
  display: flexbox;
  align-content: center;
  justify-content: center;  
  padding: 25px; 
  margin-left: 50px; 
  margin-right: 50px;   
  border: thin solid white;
  width: 50%;
}

/* Buttons */

button {
  background-color: #fff;
  border: 1px solid green;
  color: green;
  display: block;
  border-radius: 6px;
  text-align: center;
  margin: 50px;
  padding: 10px;
  width: 2in;
  font-size: 20px;
}

button:hover {
  background-color: green;
  border: 1px solid green;
  color: #fff;
  display: block;
  border-radius: 6px;
  text-align: center;
  cursor: pointer;
}

